# django-form-action

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
django_form_action/: __init__.py  decorators.py
django_form_action/templates/django_form_action/: intermediate.html
form_action/: __init__.py  decorators.py  mixins.py
